# Repo2NotebookLM-

./: .gitignore  AGENTS.md  README.en.md  README.md  Repo → NotebookLM 结构化学习导入器（RepoBook + GraphBook）需求与技术方案.txt  WORKLOG.md  install.md  pyproject.toml  repo2nlm
skills/notebooklm-py/: SKILL.md
skills/notebooklm-py/scripts/: check_ready.sh
skills/repo2notebooklm/: SKILL.md
skills/repo2notebooklm/scripts/: cleanup_out.sh  run_ingest.sh
src/repo2nlm/: cli.py  config.py  git_ops.py  graph_builder.py  scanner.py  types.py  uploader.py
src/repo2nlm/renderers/: books.py
tests/: test_multi_upload.py  test_uploader_strategy.py
