[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo2nlm"
version = "0.1.0"
description = "Git repo to NotebookLM structured importer (RepoBook + GraphBook)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
repo2nlm = "repo2nlm.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
